# bizbrain-os-plugin

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md
.claude-plugin/: marketplace.json  plugin.json
agents/: brain-gateway.md  brain-learner.md  client-sync.md  entity-watchdog.md  schema-evolution.md  visual-presenter.md
assets/: brain_colored.txt  brain_html_art.txt  gen_brain.py  hero-banner.html
commands/: archive-sessions.md  brain-viz.md  brain.md  bridge.md  client-sync.md  comms.md  content.md  dashboard.md  design.md  entity.md  gsd.md  health.md  hours.md  intake.md  knowledge.md  mcp.md  meetings.md  outreach.md  report.md  sweep.md  todo.md  visual.md
docs/: BIZBRAIN-OS-GETTING-STARTED-GUIDE.md  DASHBOARD-DESIGN.md
hooks/: hooks.json  run-hook.cmd
hooks/scripts/: _discover-brain  post-tool-use  session-end  session-start
lib/: default-config.json  folder-structure.json  integrations-registry.json
lib/zone-templates/: conversations-claude.md  launchpad-claude.md  root-claude.md  workspaces-claude.md
profiles/: agency.json  consultant.json  content-creator.json  developer.json  personal.json
scripts/: brain-migrate.js  changelog-notify.js  generate-context.js  scanner.sh  telemetry-beacon.js
skills/brain-bootstrap/: SKILL.md
skills/brain-learning/: SKILL.md
skills/brain-viz/: README.md  SKILL.md  build.py  deploy.py  landing-template.html  optimize.py  sw-template.js  (+2 more)
tools/meeting-transcriber/: README.md  pyproject.toml
tools/meeting-transcriber/meeting_transcriber/: __init__.py  _detector_macos.py  _detector_windows.py  _recorder_macos.py  _recorder_windows.py  brain_updater.py  cli.py  daemon.py  detector.py  detector_base.py  diarizer.py  formatter.py  models.py  recorder.py  transcriber.py
(+43 files in other folders)
